libecs/tests/Core/Scripting/tests/valid/component/valid_component.pvt
component TEST_Transform
    Vector3 position
    Vector3 rotation
    Vector3 scale
    Color color