libecs/tests/Core/Scripting/tests/invalid/component/invalid_component1.pvt
Transform # Component declaration needs the 'component' keyword
    Vector3 position
    Vector3 rotation
    Vector3 scale